kube_deploy/Production/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dcs-app-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dcs-app-prod
    spec:
      containers:
        - name: data-capture-service
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3100
