kube_deploy/Production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 37.143.143.174/32,37.143.143.162/32,37.143.143.10/32
  name: dcs-ingress-prod
  namespace: claim-criminal-injuries-compensation-prod
spec:
  tls:
  - hosts:
    - data-capture-service.claim-criminal-injuries-compensation.apps.live-1.cloud-platform.service.justice.gov.uk
  - hosts:
    - data-capture-service.claim-criminal-injuries-compensation.service.justice.gov.uk
    secretName: data-capture-service-cert-secret-prod
  rules:
  - host: data-capture-service.claim-criminal-injuries-compensation.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: dcs-service-prod
          servicePort: 80
  - host: data-capture-service.claim-criminal-injuries-compensation.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: dcs-service-prod
          servicePort: 80
